feat: add crud complete

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.error.include-message=always
+
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.database.driverClassName=org.postgresql.Driver
