--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.error.include-message=always
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
